@@ -1,5 +1,9 @@
 2008-02-10  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-menu.c: (update_dvb_menu_items): Fix stupidness
+
+2008-02-10  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-menu.c: (update_dvb_menu_items):
 	Better menu item label for the DVB items, don't translate
 	strings we don't need to (Closes: #515593)
